# rotastellar-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
crates/rotastellar/: Cargo.toml  README.md
crates/rotastellar-compute/: Cargo.toml  README.md
crates/rotastellar-compute/src/: feasibility.rs  latency.rs  lib.rs  power.rs  thermal.rs
crates/rotastellar-distributed/: Cargo.toml  README.md
crates/rotastellar-distributed/src/: core.rs  federated.rs  lib.rs  mesh.rs  partitioning.rs  sync.rs
crates/rotastellar-intel/: Cargo.toml  README.md
crates/rotastellar-intel/src/: conjunctions.rs  lib.rs  patterns.rs  tle.rs  tracker.rs
crates/rotastellar-track/: Cargo.toml  README.md
crates/rotastellar-track/src/: lib.rs
crates/rotastellar/src/: auth.rs  config.rs  error.rs  lib.rs  types.rs
