[package]
name = "rotastellar-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Orbital compute planning and simulation tools"
readme = "README.md"
keywords = ["space", "orbital", "data-center", "thermal-simulation", "power-analysis"]
categories = ["science", "simulation"]

[dependencies]
rotastellar = { version = "0.1.1", path = "../rotastellar" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
