[package]
name = "rotastellar-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Distributed compute coordination for Earth-space AI workloads"
readme = "README.md"
keywords = ["space", "distributed", "federated-learning", "orbital", "mesh-routing"]
categories = ["science", "simulation", "concurrency"]

[dependencies]
rotastellar = { version = "0.1.0", path = "../rotastellar" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
