[package]
name = "rotastellar-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Orbital intelligence and space situational awareness"
readme = "README.md"
keywords = ["space", "satellite", "tracking", "conjunction-analysis", "tle"]
categories = ["science", "aerospace"]

[dependencies]
rotastellar = { path = "../rotastellar" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
sgp4 = []
