[package]
name = "rotastellar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust SDK for RotaStellar - Space Computing Infrastructure"
readme = "README.md"
keywords = ["space", "orbital", "satellite", "data-center", "space-computing"]
categories = ["science", "simulation", "aerospace"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
async = ["reqwest", "tokio"]
